<resources>
    <string name="app_name">PokeWise</string>


    <!-- Strings used for dialogs-->
    <string name="acept">Aceptar</string>

    <!-- Strings used for login-->

    <string name="password">Contraseña</string>
    <string name="user">Correo electrónico</string>
    <string name="email">Correo electrónico</string>
    <string name="login">Iniciar Sesión</string>
    <string name="enter">Iniciar sesión</string>
    <string name="welcome">Bienvenido, entrenador.</string>


    <!-- Strings for bottom navigation-->
    <string name="pokemons">Pokemons</string>
    <string name="team">Equipo</string>
    <string name="settings">Configurar</string>

    <!-- Strings for home activity-->
    <string name="all_pokemons">Todos los pokemons</string>
    <string name="my_team">Mi Equipo</string>
    <string name="my_settings">Mis Configuraciones</string>
    <string name="empty_list">La lista esta vacia</string>


    <!-- Strings for details bottom sheet-->
    <string name="height">Altura:</string>
    <string name="weight">Peso:</string>
    <string name="type">Tipo:</string>
    <string name="addTeam">Agregar al equipo</string>

    <!-- Strings for settings activity-->

    <string name="logout">Salir</string>
    <string name="delete_team">Borrar equipo</string>

    <!-- Strings for Confirm pokemon-->

    <string name="delete_pokemon">¿Eliminar pokémon del equipo?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>



</resources>
