<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mauricioburgos.pokeyellow.presentation.viewmodel.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/ivBackground_loginfrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/ivLogo_loginfrag"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvWelcome_loginfrag"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@color/colorRed"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivLogo_loginfrag" />


                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintBottom_toBottomOf="@id/etUser_fragLogin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/etUser_fragLogin" />


                <EditText
                    android:id="@+id/etUser_fragLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/white_round_rectangle"
                    android:hint="@string/user"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@={viewModel.mEmailAddress}"
                    android:textColor="@color/colorBlackTr"
                    android:textColorHint="@color/colorGrayTr"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/ivUser"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvWelcome_loginfrag"

                    />

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/ic_password"
                    app:layout_constraintBottom_toBottomOf="@id/ti_actLogin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ti_actLogin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_actLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toRightOf="@id/ivPassword"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etUser_fragLogin"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGrayTr"


                    >

                    <EditText
                        android:id="@+id/etPassword_actLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_round_rectangle"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:text="@={viewModel.mPassword}"
                        android:textColor="@color/colorBlackTr"
                        android:textColorHint="@color/colorGrayTr"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/red_round_rectangle"
                    android:onClick="@{()-> viewModel.checkUserData()}"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/enter"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ti_actLogin"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>